--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,25 +3,88 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --main-color: #6e9b2f;
+  --text-color: #000;
+  --background-color: #fff;
+  --secondary-background-color: #c9d6ff;
+  --third-level-background-color: #eee;
+  --fourth-background-color: rgb(238, 238, 238);
+  --gradient: linear-gradient(
+    221deg,
+    rgba(238, 238, 238, 1) 0%,
+    rgba(167, 190, 129, 1) 50%,
+    rgba(133, 195, 52, 1) 100%
+  );
 }
 
+/* Dark mode styles */
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --text-color: #fff;
+    --background-color: #111;
+    --secondary-background-color: #222;
+    --third-level-background-color: #454545;
+    --fourth-background-color: rgb(34, 38, 24);
+    --gradient: linear-gradient(
+      221deg,
+      rgba(34, 38, 24, 1) 0%,
+      rgba(64, 82, 34, 1) 50%,
+      rgba(133, 195, 52, 1) 100%
+    );
   }
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", Arial, sans-serif;
+}
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 0;
+  padding: 0;
+  background: var(--fourth-background-color) no-repeat center center fixed;
+  background: var(--gradient) no-repeat center center fixed;
+  color: var(--text-color);
+}
+a {
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+.table {
+  background-color: var(--third-level-background-color);
+}
+
+#toggle_nav:checked ~ div #hamburger #line {
+  @apply rotate-45 translate-y-1.5;
+}
+
+#toggle_nav:checked ~ div #hamburger #line2 {
+  @apply -rotate-45 -translate-y-1;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #fff;
+  border: 1px solid #e9e9ec;
+}
+
+@media (prefers-color-scheme: dark) {
+  ::-webkit-scrollbar-track {
+    background-color: #0f172a;
+    border: 1px solid #293041;
+  }
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--main-color);
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--main-color);
 }
